# aira

./: .gitignore  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
api/: Cargo.toml  dockerfile
api/migration/src/: lib.rs  m20240327_122519_submission.rs  m20240327_122529_reminder.rs
api/src/: app.rs  main.rs
api/src/entity/: mod.rs  prelude.rs  reminder.rs  submission.rs
client/: .dockerignore  Cargo.toml  dockerfile
client/src/: event_handler.rs  events.rs  main.rs
client/src/commands/: ping.rs
client/src/events/: message_link_preview.rs  ready.rs
client/src/util/: discord.rs
