[package]
name = "api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
axum = "0.7.5"
chrono = "0.4.35"

[dependencies.sea-orm]
version = "0.12"
features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-uuid",
  "with-chrono"
]

[dependencies.tokio]
version = "1.36.0"
features = ["macros", "rt-multi-thread", "signal"]

[dev-dependencies]
rstest = "0.18.2"
